# rcqp

./: DESCRIPTION
Current/: DESCRIPTION  NAMESPACE  cleanup  configure.win
Current/R/: main.R  s3.R
Current/man/: cqp_registry.Rd  region_sizes.Rd
Current/src/: rcqpCommands.c  rcqpUtils.c
Current/src/cwb/cl/: corpus.c
Current/src/cwb/cqp/: corpmanag.c
Extras/Scripts/Shell/: README_cross_compile  build_macosx_package  configure.ac  cross_compile  rcqpcrossrc.TMPL
Tags/vs-0_4/src/: rcqpUtils.c
